--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,12 @@
   },
   "homepage": "https://github.com/B-i-x/ECE-513-Project#readme",
   "dependencies": {
-    "express": "^4.21.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "jsonwebtoken": "^9.0.2",
