--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,6 @@
     "jade": "^0.29.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.0.0",
-    "morgan": "~1.9.1"
+    "morgan": "^1.10.0"
   }
 }
